fixing hover style for album covers

--- a/views/style.sass
+++ b/views/style.sass
@@ -194,6 +194,7 @@ a
   height: 50px
   padding: 20px
   opacity: 0.8
+  color: #000
   
 .view_songs_in_album
   top: 215px
@@ -210,7 +211,6 @@ a
   float: left
   width: 300px
   height: 325px
-  text-align: bottom
   margin: 0px 20px 60px 20px
 
   img
@@ -241,17 +241,16 @@ a:hover
   font-size: 18px
 
 #nocovers
+  position: relative
   float: left
   width: 300px
   height: 300px
-  text-align: bottom
-  margin: 0px 20px 20px 15px
-  border: 5px solid #ccc
-
+  margin: 0px 20px 10px 20px
+  img
+    border: 5px solid #ccc
   h3
     margin-left: auto
     margin-right: auto
-    margin-top: 20%
     line-height: 1.5em
     width: 250px
     text-align: center
